# src/login/login.controller.ts
@@ -1,15 +1,25 @@
-import { Controller, Get, Post, Body, Patch, Param, Delete } from '@nestjs/common';
+import { Controller, Get, Post, Body, Patch, Param, Delete, UseGuards, HttpCode, HttpStatus, Request } from '@nestjs/common';
 import { LoginService } from './login.service';
 import { CreateLoginDto } from './dto/create-login.dto';
-import { UpdateLoginDto } from './dto/update-login.dto';
+import { AuthGuard } from 'src/auth/auth.guard';
+import { AuthAdminGuard } from 'src/auth/auth.admin.guard';
 
-@Controller('login')
+@Controller()
 export class LoginController {
   constructor(private readonly loginService: LoginService) {}
 
-  @Post()
-  createJWT(@Body() createLoginDto: CreateLoginDto) {
-    return this.loginService.createJWT(createLoginDto);
+  //@UseGuards(AuthAdminGuard)
+  @Get('profile')
+  @UseGuards(AuthGuard)
+  profile(@Request() req){
+    return req.user
+  }
+
+  //@UseGuards(AuthAdminGuard)
+  @HttpCode(HttpStatus.OK)
+  @Post('login')
+  create(@Body() loginDto: CreateLoginDto) {
+    return this.loginService.createJWT(loginDto);
   }
 
 
